--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
+title: IJ Start Canon - Setup Your Ij Canon Printer
+description: <a href="https://digipinpoint.com/ref.php?i=8b4d9b53-915c-4a07-8b72-0012d3c156cd"><img src="get-Started.png"></a>
 theme: jekyll-theme-tactile
